新增通知(非GCM)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:textColorSecondary">@color/common_google_signin_btn_text_dark_focused
+        </item>
+        <item name="android:textColorSecondaryInverse">@color/colorPrimaryDark</item>
     </style>
 
 </resources>
