--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,59 +10,71 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.cram1001.HomeActivity"
     android:background="@drawable/background">
-    <Button
-        android:layout_width="170dp"
-        android:layout_height="85dp"
-        android:id="@+id/schedule"
-
-        android:layout_alignTop="@+id/Catch"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/schedule" />
-
-    <Button
-        android:layout_width="170dp"
-        android:layout_height="85dp"
-        android:id="@+id/qk"
-
-        android:layout_alignTop="@+id/attendance"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/qk" />
-
-    <Button
-        android:layout_width="170dp"
-        android:layout_height="85dp"
-        android:id="@+id/attendance"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:background="@drawable/absence" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
-        android:id="@+id/billboard"
-
-        android:background="@drawable/billboard"
-        android:padding="15dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="23dp"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="170dp"
-        android:layout_height="85dp"
-        android:id="@+id/Catch"
-
-        android:layout_marginTop="23dp"
-        android:background="@drawable/gohome"
-        android:layout_below="@+id/attendance"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
+    <ScrollView android:id="@+id/contencrollView"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/call" />
+        android:layout_width="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:layout_width="match_parent"
+            android:id="@+id/billboard"
+
+            android:background="@drawable/billboard"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_height="110dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:id="@+id/attendance"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/absence"
+            android:layout_height="110dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:id="@+id/qk"
+
+            android:layout_alignTop="@+id/attendance"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/qk"
+            android:layout_height="110dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:id="@+id/Catch"
+
+            android:background="@drawable/gohome"
+            android:layout_below="@+id/attendance"
+            android:layout_alignParentStart="true"
+            android:layout_height="110dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:id="@+id/schedule"
+
+            android:layout_alignTop="@+id/Catch"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/schedule"
+            android:layout_height="110dp" />
+
+        <Button
+            android:text="Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/call" />
+    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
