--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -13,17 +13,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:layout_below="@+id/texttitle"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textdate"
-        android:layout_marginTop="39dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:textColor="#000000" />
+        android:textColor="#000dff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,8 +22,20 @@
         android:text="New Text"
         android:id="@+id/texttitle"
         android:textSize="25dp"
-        android:layout_below="@+id/textdate"
-        android:layout_alignParentStart="true"
-        android:textColor="#27348a" />
+        android:textColor="#000000"
+        android:layout_alignBaseline="@+id/textdate"
+        android:layout_alignBottom="@+id/textdate"
+        android:layout_toEndOf="@+id/textdate"
+        android:layout_marginStart="30dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textdate"
+        android:layout_marginTop="20dp"
+        android:textColor="#000000"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
