--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -3,15 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:padding="10dp"
+    android:paddingLeft="25dp"
+    android:paddingRight="25dp">
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="350dp"
-        android:layout_height="442dp"
         android:layout_weight="0.62"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <!--<TextView-->
     <!--android:id="@+id/empty"-->
