--- a/app/src/main/res/layout/activity_gcm.xml
+++ b/app/src/main/res/layout/activity_gcm.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.user.cram1001.GcmActivity">
+    tools:context="com.example.user.cram1001.NotificationActivity">
 
     <TextView
         android:id= "@+id/textView1"
