--- a/app/src/main/res/layout/adapter_check.xml
+++ b/app/src/main/res/layout/adapter_check.xml
@@ -10,12 +10,15 @@
         android:layout_height="43dp"
         android:id="@+id/name"
         android:textSize="24sp"
-        android:layout_weight="0.17" />
+        android:layout_weight="0.04" />
 
-    <CheckBox
+
+
+    <TextView
+        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox2"
-        android:layout_weight="0.53" />
+        android:id="@+id/textcheck"
+        android:layout_weight="0.04" />
 
 </LinearLayout>
