--- a/app/src/main/res/layout/activity_qk.xml
+++ b/app/src/main/res/layout/activity_qk.xml
@@ -39,7 +39,18 @@
                 android:layout_alignParentEnd="true"
                 android:layout_toRightOf="@+id/textView3"
                 android:layout_toEndOf="@+id/textView3"
-                android:layout_column="8" />
+                android:layout_column="8"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                android:background="#b9dcff" />
+            <!--
+                        <EditText
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPersonName"
+                            android:text="Name"
+                            android:ems="10"
+                            android:id="@+id/editqktime"
+                            android:onClick="showDatePickerDialog"/> -->
         </TableRow>
 
         <TableRow
