--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -13,11 +13,16 @@
 
 
     <ListView
+        android:layout_above="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="18dp"
         android:id="@+id/list2"
-       />
-
+        android:layout_alignParentBottom="true" />
+<Button
+    android:id="@+id/btn"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Press Here"
+    android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
