--- a/app/src/main/res/layout/list_check.xml
+++ b/app/src/main/res/layout/list_check.xml
@@ -2,11 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
-
+    android:background="@drawable/background"
+    android:orientation="vertical">
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Press Here"
+        android:layout_alignParentBottom="true"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listviewcheck"
         android:padding="15dp" />
+
 </LinearLayout>
