--- a/app/src/main/res/layout/activity_create_member.xml
+++ b/app/src/main/res/layout/activity_create_member.xml
@@ -15,19 +15,19 @@
         android:layout_height="wrap_content"
         android:id="@+id/createid"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:text="帳號" />
+        android:layout_toEndOf="@+id/textView14" />
 
-    <Button
+    <TextView
+        android:text="帳號："
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="註冊"
-        android:id="@+id/test"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/textView14"
+        android:textSize="25sp"
+        android:layout_alignBaseline="@+id/createid"
+        android:layout_alignBottom="@+id/createid"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -36,20 +36,66 @@
         android:ems="10"
         android:id="@+id/createpwd"
         android:layout_below="@+id/createid"
-        android:layout_alignRight="@+id/createid"
-        android:layout_alignEnd="@+id/createid"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="密碼" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="12dp"
+        android:layout_toEndOf="@+id/textView15" />
+
+    <TextView
+        android:text="密碼："
+        android:textSize="25sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView15"
+        android:layout_alignBaseline="@+id/createpwd"
+        android:layout_alignBottom="@+id/createpwd"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/createname"
         android:layout_below="@+id/createpwd"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="19dp"
+        android:layout_toEndOf="@+id/textView16" />
+
+    <TextView
+        android:text="姓名："
+        android:textSize="25sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView16"
+        android:layout_alignBaseline="@+id/createname"
+        android:layout_alignBottom="@+id/createname"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="註冊"
+        android:id="@+id/test"
+        android:layout_below="@+id/createname"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="88dp" />
+
+    <TextView
+        android:text="Beacon Minor："
+        android:textSize="25sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView17"
+        android:layout_below="@+id/createname"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/createpwd"
-        android:layout_alignEnd="@+id/createpwd"
-        android:text="姓名" />
+        android:layout_marginTop="18dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/beaconminor"
+        android:layout_alignBaseline="@+id/textView17"
+        android:layout_alignBottom="@+id/textView17"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/textView17" />
 </RelativeLayout>
