--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,11 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.cram1001.HomeActivity"
     android:background="@drawable/background">
+
     <ScrollView android:id="@+id/contencrollView"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="32dp"
+        android:layout_alignParentEnd="true">
 
     <LinearLayout
         android:orientation="vertical"
@@ -77,4 +80,14 @@
             android:id="@+id/call" />
     </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="25dp"
+        android:id="@+id/UIDtest"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
