--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -6,36 +6,36 @@
   >
 
     <TextView
-        android:id="@+id/textcontent"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:minHeight="?android:attr/listPreferredItemHeight"
-        android:layout_below="@+id/texttitle"
-        android:layout_alignParentStart="true"
-        android:textColor="#000dff" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/texttitle"
         android:textSize="25dp"
         android:textColor="#000000"
-        android:layout_alignBaseline="@+id/textdate"
-        android:layout_alignBottom="@+id/textdate"
-        android:layout_toEndOf="@+id/textdate"
-        android:layout_marginStart="30dp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="#aaff8ca5"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textdate"
-        android:layout_marginTop="20dp"
         android:textColor="#000000"
-        android:layout_alignParentTop="true"
+        android:elevation="1dp"
+        android:layout_below="@+id/texttitle"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/textcontent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:textColor="@android:color/black"
+        android:layout_below="@+id/textdate"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
