--- a/app/src/main/res/layout/adapter_check.xml
+++ b/app/src/main/res/layout/adapter_check.xml
@@ -18,12 +18,19 @@
         android:layout_height="wrap_content"
         android:id="@+id/checktext"
         android:layout_weight="0.04" />
-<!--
-    <CheckBox
+
+    <Button
+        android:text="通知"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox7"
+        android:id="@+id/notifi"
         android:layout_weight="0.04" />
--->
+    <!--
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkBox7"
+            android:layout_weight="0.04" />
+    -->
 
 </LinearLayout>
