--- a/app/src/main/res/layout/activity_home_teacher.xml
+++ b/app/src/main/res/layout/activity_home_teacher.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.user.cram1001.Home_teacherActivity">
+    tools:context="com.example.user.cram1001.Home_teacherActivity"
+    android:background="@drawable/background">
     <ScrollView android:id="@+id/contencrollView"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
