--- a/app/src/main/res/layout/activity_add_billboard.xml
+++ b/app/src/main/res/layout/activity_add_billboard.xml
@@ -26,6 +26,7 @@
                 android:text="日期："
                 android:id="@+id/textView4"
                 android:textSize="20dp"
+                android:textColor="?android:attr/panelColorBackground"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
@@ -53,7 +54,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:textColor="?android:attr/panelColorBackground" />
 
             <EditText
                 android:layout_width="278dp"
@@ -77,7 +79,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:textColor="?android:attr/panelColorBackground"/>
 
             <EditText
                 android:layout_width="278dp"
