--- a/app/src/main/res/layout/activity_add_schedule.xml
+++ b/app/src/main/res/layout/activity_add_schedule.xml
@@ -27,7 +27,8 @@
         android:id="@+id/textView10"
         android:textSize="25sp"
         android:layout_above="@+id/spinner"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="?android:attr/panelColorBackground"/>
 
     <TextView
         android:text="時間："
@@ -36,7 +37,8 @@
         android:textSize="25sp"
         android:id="@+id/textView12"
         android:layout_alignTop="@+id/timePicker"
-        android:layout_alignStart="@+id/textView11" />
+        android:layout_alignStart="@+id/textView11"
+        android:textColor="?android:attr/panelColorBackground"/>
 
     <TextView
         android:text="日期："
@@ -46,7 +48,8 @@
         android:textSize="25sp"
         android:layout_marginStart="23dp"
         android:layout_alignTop="@+id/spinner"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="?android:attr/panelColorBackground"/>
 
     <Spinner
         android:id="@+id/spinner"
