--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -52,15 +53,7 @@
 
 -->
 
-    <CheckBox
-        android:text="記住密碼"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkBox8"
-        android:layout_marginBottom="113dp"
-        android:layout_above="@+id/create"
-        android:layout_alignStart="@+id/textView2" />
-
+    <!--
     <CheckBox
         android:text="自動登入"
         android:layout_width="wrap_content"
@@ -71,6 +64,17 @@
         android:layout_alignBottom="@+id/checkBox8"
         android:layout_alignEnd="@+id/editPWD"
         android:layout_marginEnd="14dp" />
+-->
+
+    <ImageView
+        android:layout_width="wrap_content"
+        app:srcCompat="@drawable/main"
+        android:id="@+id/imageView"
+        android:alpha="50"
+        android:elevation="2dp"
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         style="oval"
@@ -79,49 +83,7 @@
         android:id="@+id/create"
         android:alpha="100"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/checkBox8" />
-
-    <EditText
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-
-        android:id="@+id/editPWD"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_marginRight="37dp"
-
-        android:layout_marginBottom="52dp"
-        android:layout_above="@+id/checkBox8"
-        android:layout_alignStart="@+id/editID" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="密碼："
-        android:id="@+id/textView2"
-        android:textSize="25dp"
-        android:layout_marginStart="43dp"
-        android:layout_alignBottom="@+id/editPWD"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="帳號："
-        android:id="@+id/textView"
-        android:textSize="25dp"
-        android:layout_marginBottom="58dp"
-        android:layout_above="@+id/editPWD"
-        android:layout_toStartOf="@+id/editPWD"
-        android:layout_marginEnd="19dp" />
-
-    <EditText
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/editID"
-        android:layout_marginRight="37dp"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_toEndOf="@+id/checkBox8" />
+        android:layout_toStartOf="@+id/button" />
 
     <Button
         android:layout_height="70dp"
@@ -132,9 +94,60 @@
         android:clickable="false"
         android:layout_width="150dp"
 
-        android:layout_marginBottom="12dp"
-        android:layout_above="@+id/create"
-        android:layout_alignEnd="@+id/create" />
+        android:layout_marginBottom="33dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/editID"
+        android:layout_alignBaseline="@+id/textView"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_alignStart="@+id/editPWD"
+        android:layout_alignEnd="@+id/editPWD" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="密碼："
+        android:id="@+id/textView2"
+        android:textSize="25dp"
+        android:textColor="?android:attr/panelColorBackground"
+        android:layout_alignBaseline="@+id/editPWD"
+        android:layout_alignBottom="@+id/editPWD"
+        android:layout_toStartOf="@+id/checkBox8"
+        android:layout_marginEnd="12dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="帳號："
+        android:id="@+id/textView"
+        android:textSize="25dp"
+        android:layout_marginBottom="26dp"
+        android:textColor="?android:attr/panelColorBackground"
+        android:layout_above="@+id/editPWD"
+        android:layout_alignStart="@+id/textView2" />
+
+    <CheckBox
+        android:text="記住密碼"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox8"
+        android:layout_above="@+id/button"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_height="wrap_content"
+
+        android:id="@+id/editPWD"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:layout_marginRight="37dp"
+
+        android:layout_width="220dp"
+        android:layout_marginBottom="14dp"
+        android:layout_above="@+id/checkBox8"
+        android:layout_toEndOf="@+id/textView2" />
 </RelativeLayout>
