--- a/app/src/main/res/layout/activity_qk_teacher.xml
+++ b/app/src/main/res/layout/activity_qk_teacher.xml
@@ -8,6 +8,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.user.cram1001.Ok_teacherActivity">
+    tools:context="com.example.user.cram1001.Qk_teacherActivity"
+    android:background="@drawable/background">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/listqk" />
 </RelativeLayout>
