--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#4cb0ff</color>
     <color name="colorPrimaryDark">#396bff</color>
-    <color name="colorAccent">#ff0400</color>
+    <color name="colorAccent">#ff004f</color>
 </resources>
