--- a/app/src/main/res/layout/activity_billboard_teacher.xml
+++ b/app/src/main/res/layout/activity_billboard_teacher.xml
@@ -62,7 +62,10 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="440dp"
             android:id="@+id/buttonaddbill"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:textColor="#000000"
+            android:background="@color/colorAccent"
+            android:textSize="24sp" />
 
         <ListView
             android:id="@+id/list1105"
