--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,14 +17,17 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="32dp"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:scrollbars="none">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
         <Button
             android:layout_width="match_parent"
@@ -34,7 +37,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_height="110dp" />
+            android:layout_height="110dp"
+             />
 
         <Button
             android:layout_width="match_parent"
@@ -42,7 +46,8 @@
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
             android:background="@drawable/absence"
-            android:layout_height="110dp" />
+            android:layout_height="110dp"
+          />
 
         <Button
             android:layout_width="match_parent"
@@ -62,13 +67,6 @@
             android:layout_alignParentStart="true"
             android:layout_height="110dp" />
 
-        <Button
-            android:text="Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/call" />
     </LinearLayout>
     </ScrollView>
 
@@ -76,17 +74,21 @@
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/Uclass"
+        android:id="@+id/UIDtest"
+        android:layout_marginStart="23dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="61dp" />
+        android:layout_alignParentStart="true"
+        android:textColor="#013cff"
+        android:textSize="18sp" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/UIDtest"
+        android:id="@+id/Uclass"
+        android:layout_marginEnd="26dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="17dp" />
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
