--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -36,6 +36,7 @@
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:textColor="@android:color/black"
         android:layout_below="@+id/textdate"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="18sp" />
 
 </RelativeLayout>
