--- a/app/src/main/res/layout/activity_home_teacher.xml
+++ b/app/src/main/res/layout/activity_home_teacher.xml
@@ -14,8 +14,9 @@
     <ScrollView android:id="@+id/contencrollView"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:scrollbars="none"
         android:layout_alignParentTop="true"
-        android:scrollbars="none">
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="vertical"
