--- a/app/src/main/res/layout/list_check.xml
+++ b/app/src/main/res/layout/list_check.xml
@@ -4,12 +4,20 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:orientation="vertical">
+
     <Button
         android:id="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Press Here"
         android:layout_alignParentBottom="true"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView23"
+        android:text="56456456" />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
