--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -12,12 +12,12 @@
     android:background="@drawable/background">
 
 
-    <Button
-    android:id="@+id/btn"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Press Here"
-    android:layout_alignParentBottom="true"/>
+    <!--<Button-->
+    <!--android:id="@+id/btn"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="Press Here"-->
+    <!--android:layout_alignParentBottom="true"/>-->
 
     <ListView
         android:layout_width="match_parent"
