--- a/app/src/main/res/layout/activity_billboard_teacher.xml
+++ b/app/src/main/res/layout/activity_billboard_teacher.xml
@@ -54,25 +54,22 @@
         android:layout_marginStart="14dp" />
         -->
 
+        <ListView
+            android:id="@+id/list1105"
+            android:layout_width="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_height="430dp" />
+
         <Button
             android:text="新增"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="440dp"
+            android:layout_marginTop="25dp"
             android:id="@+id/buttonaddbill"
-            android:layout_alignParentEnd="true"
             android:textColor="#000000"
             android:background="@color/colorAccent"
-            android:textSize="24sp" />
-
-        <ListView
-            android:id="@+id/list1105"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="28dp"
-            android:layout_alignParentBottom="true"
+            android:textSize="24sp"
+            android:layout_below="@+id/list1105"
             android:layout_alignParentStart="true" />
 
 </RelativeLayout>
