--- a/app/src/main/res/layout/activity_create_member.xml
+++ b/app/src/main/res/layout/activity_create_member.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="25dp"
+    android:paddingRight="25dp"
     tools:context="com.example.user.cram1001.CreateMemberActivity"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:padding="20dp">
 
     <EditText
         android:layout_width="wrap_content"
@@ -53,15 +53,6 @@
         android:layout_alignParentStart="true"
         android:textColor="?android:attr/panelColorBackground"/>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/createname"
-        android:layout_below="@+id/createpwd"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="19dp"
-        android:layout_toEndOf="@+id/textView16" />
-
     <TextView
         android:text="姓名："
         android:textSize="25sp"
@@ -83,26 +74,18 @@
         android:textColor="?android:attr/panelColorBackground"
         android:layout_below="@+id/createname"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="13dp" />
+        android:layout_marginTop="13dp"
+        android:layout_toStartOf="@+id/createname" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="註冊"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
         android:id="@+id/test"
         android:textColor="?android:attr/panelColorBackground"
         android:layout_marginTop="67dp"
         android:layout_below="@+id/textView18"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/createrclass"
-        android:layout_alignBottom="@+id/textView17"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/test"
-        android:layout_alignStart="@+id/createname" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/creat"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -113,6 +96,24 @@
         android:layout_alignTop="@+id/textView18"
         android:layout_above="@+id/test"
         android:layout_toEndOf="@+id/textView18" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/createrclass"
+        android:layout_alignBaseline="@+id/textView17"
+        android:layout_alignBottom="@+id/textView17"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/textView17" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/createname"
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/createpwd"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/textView16" />
 
     <TextView
         android:text="Beacon Minor："
