--- a/app/src/main/res/layout/adapter_check.xml
+++ b/app/src/main/res/layout/adapter_check.xml
@@ -10,14 +10,31 @@
         android:layout_height="43dp"
         android:id="@+id/name"
         android:textSize="24sp"
-        android:layout_weight="0.04" />
+        android:layout_weight="0.01"
+        android:textColor="#000000" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/studentclass"
+        android:layout_weight="0.01" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkid"
+        android:alpha="0"
+        android:textSize="8sp" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checktext"
-        android:layout_weight="0.04" />
+        android:layout_weight="0.01"
+        android:textColor="#d80000" />
 
     <!--
         <CheckBox
