--- a/app/src/main/res/layout/list_check.xml
+++ b/app/src/main/res/layout/list_check.xml
@@ -5,18 +5,18 @@
     android:background="@drawable/background"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Press Here"
-        android:layout_alignParentBottom="true"/>
+    <!--<Button-->
+        <!--android:id="@+id/btn"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Press Here"-->
+        <!--android:layout_alignParentBottom="true"/>-->
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView23"
-        android:text="56456456" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/textView23"-->
+        <!--android:text="56456456" />-->
 
     <ListView
         android:layout_width="match_parent"
