--- a/app/src/main/res/layout/activity_billboard_teacher.xml
+++ b/app/src/main/res/layout/activity_billboard_teacher.xml
@@ -70,6 +70,7 @@
             android:background="@color/colorAccent"
             android:textSize="24sp"
             android:layout_below="@+id/list1105"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
